# agilus_verifier_pulgin

./: README.md  pyproject.toml
src/lyik/irct_verifier/: __init__.py  passen_verification_plugin.py
src/lyik/mobile_verifier/: __init__.py  mobile_verification.py
src/lyik/model/: irctcbookingform.py  jobapplicationform.py  sampleform.py
src/lyik/user_verifier/: user_verification.py
venv310/: pyvenv.cfg
venv310/Scripts/: activate  activate.bat
