[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-mobile-verifier"
version = "0.1.0"
description = "Verifying a valid mobile number"
readme = "README.md"
authors = [{ name = "Rahul C", email = "rahulc@gmail.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = []

[project.entry-points."LYIK"]
_200_VERIFIER_MOBILE_NUMBER_CUSTOM = "lyik.mobile_verifier.mobile_verification:MobileVerification"
_200_VERIFIER_USER_DETAILS = "lyik.mobile_verifier.mobile_verification:UserVerification"
_200_VERIFIER_PERSONAL_DETAILS = "lyik.user_verifier.user_verification:UserVerification"
_200_VERIFIER_passengerVerification = "lyik.irct_verifier.passen_verification_plugin:passengerVerification"
_200_VERIFIER_TrainTicketBooking = "lyik.irct_verifier.passen_verification_plugin:TrainTicketBookingVerification"
_200_VERIFIER_PlatformTicket = "lyik.irct_verifier.passen_verification_plugin:PlatformTicketVerfication"
_200_VERIFIER_PaymentVerification = "lyik.irct_verifier.passen_verification_plugin:PaymentVerification"
_200_VERIFIER_BookingTracking= "lyik.irct_verifier.passen_verification_plugin:BookingTrackingVerification"
_200_VERIFIER_JourneyVerification = "lyik.irct_verifier.passen_verification_plugin:JourneyVerification"
_200_VERIFIER_CancelTicket = "lyik.irct_verifier.passen_verification_plugin:CancelTicketVerification"